spacing fixed

--- a/real-estate-page/css/style.css
+++ b/real-estate-page/css/style.css
@@ -90,7 +90,7 @@ section.search-bar form {
     /* font-size: 100px; */
     color: black;
     background-color: white;
-    line-height: 25px;
+    line-height: 30px;
 }
 
 section.search-bar {
@@ -99,7 +99,7 @@ section.search-bar {
     display: flex;
     justify-content: space-evenly;   
     font-family: 'Anton', sans-serif;
-    padding: 15px 0px;
+    padding: 15px 0px 20px 0px;
     border-radius: 15px;
     opacity: .8;
     margin: auto 0px auto auto;
